--- a/_layouts/lexiconEntry.html
+++ b/_layouts/lexiconEntry.html
@@ -60,10 +60,11 @@ document.onkeydown = function(evt) {
 </p></div>
 {% assign occurences = page.occurences | split: ","%}{% assign list_of_links = "" | split: "," %}{% for case in occurences %}{% assign sNum = case | plus: 0 %}{% assign list_of_links = list_of_links | push: site.data.temp[sNum]%}{%endfor%}
 {{list_of_links}}
+{% for i in (1..39) %}{{list_of_links | where: "book", i}}{%endfor%}
+
 {% if list_by_book %} {% assign list_by_book =  list_of_links|group_by:"book"%}
 {{list_by_book}}
 <span id="toc"><span style="color:darkgray;"> </span><a class="shadow" href="https://bh.seveleu.com/v/{{case}}.html">{ř}:{š}</a></span>
 {% endif %}
-{% for i in (1..15) %}{{i}}{%endfor%}
 {% include footer.html %}
 </body></html>
