--- a/_layouts/lexiconEntry.html
+++ b/_layouts/lexiconEntry.html
@@ -58,15 +58,13 @@ document.onkeydown = function(evt) {
 <a class="shadow" style="float:right;" href="/w/{% include nav_next.html current=page.strongNumber %}.html">Forth &raquo;</a></p>
 <div style="display: flex;"><p style="margin-bottom:27px;"><span id="toc" style="font-family:sans-serif;">Mentioned in </span>{{page.links}}
 </p></div>
-{% if page.occurences %}
-{% assign occurences = page.occurences | split: ","%}{% assign list_of_links = "" | split: "," %}{% for case in occurences %}{% assign sNum = case | plus: 0 %}{% assign list_of_links = list_of_links | push: site.data.temp[sNum]%}{%endfor%}
+{% assign occurences = page.occurences | split: ","%}{% assign list_of_links = "" | split: "," %}{% for case in occurences %}{% assign sNum = case | plus: 0 %}{%if sNum %}{% assign list_of_links = list_of_links | push: site.data.temp[sNum]%}{%endif%}{%endfor%}
 {{list_of_links}}
 {% for i in (1..39) %}{{list_of_links | where: "book", i}}{%endfor%}
 
 {% if list_by_book %} {% assign list_by_book =  list_of_links|group_by:"book"%}
 {{list_by_book}}
 <span id="toc"><span style="color:darkgray;"> </span><a class="shadow" href="https://bh.seveleu.com/v/{{case}}.html">{ř}:{š}</a></span>
-{% endif %}
 {% endif %}
 {% include footer.html %}
 </body></html>
