--- a/_layouts/lexiconEntry.html
+++ b/_layouts/lexiconEntry.html
@@ -60,7 +60,7 @@ document.onkeydown = function(evt) {
 </p></div>
 {% assign occurences = page.occurences | split: ","%}{% assign list_of_links = "" | split: "," %}{% for case in occurences %}{% assign sNum = case | plus: 0 %}{%if sNum < site.data.temp.size %}{% assign list_of_links = list_of_links | push: site.data.temp[sNum]%}{%endif%}{%endfor%}
 {{list_of_links}}
-{% for i in (1..39) %}{{list_of_links | where: "book", i}}{%endfor%}
+{% for i in (1..39) %}{% assign is = i | downcase %}{{list_of_links | where: "book", is}}{%endfor%}
 
 {% if list_by_book %} {% assign list_by_book =  list_of_links|group_by:"book"%}
 {{list_by_book}}
