--- a/_layouts/lexiconEntry.html
+++ b/_layouts/lexiconEntry.html
@@ -59,12 +59,14 @@ document.onkeydown = function(evt) {
 <div style="display: flex;"><p style="margin-bottom:27px;"><span id="toc" style="font-family:sans-serif;">Mentioned in </span>{{page.links}}
 </p></div>
 {% assign occurences = page.occurences | split: ","%}{% assign list_of_links = "" | split: "," %}{% for case in occurences %}{% assign sNum = case | plus: 0 %}{%if sNum < site.data.temp.size %}{% assign list_of_links = list_of_links | push: site.data.temp[sNum]%}{%endif%}{%endfor%}
-{{list_of_links}}
-{% for i in (1..39) %}{% assign is = i | downcase %}{% assign temp_links = list_of_links| where: "book", is%}{{i}} --- {{temp_links}},  {%endfor%}
+{% for i in (1..39) %}{% assign is = i | downcase %}{% assign current_links = list_of_links| where: "book", is%}{% if list_of_links%}///{{i}}/// 
+{%for link in list_of_links%}
+<span id="toc"><span style="color:darkgray;"> </span><a class="shadow" href="https://bh.seveleu.com/v/{{link.number}}.html">{{link.chapter}}:{{link.verse}}</a></span>
+{%if forloop.index.last %}{%else%}, {%endif%}
+{%endfor%}{% endif %}{%endfor%}
 
 {% if list_by_book %} {% assign list_by_book =  list_of_links|group_by:"book"%}
 {{list_by_book}}
-<span id="toc"><span style="color:darkgray;"> </span><a class="shadow" href="https://bh.seveleu.com/v/{{case}}.html">{ř}:{š}</a></span>
 {% endif %}
 {% include footer.html %}
 </body></html>
