--- a/css/tufte.css
+++ b/css/tufte.css
@@ -268,7 +268,7 @@ h3 {
   font-style: bold;
   font-weight: 900;
   font-size: 1.8rem;
-  margin-top: 2.1777777777777778rem;
+  margin-top: 0;/*2.1777777777777778rem;*/
   margin-bottom: 0;
   line-height: 1.08888888888889; }
 
@@ -759,8 +759,8 @@ ol.word {
 hr.slender {
   border: 0;
   height: 1px;
-  margin-top: 1.4rem;
-  margin-bottom: 1.4rem;
+  /*margin-top: 1.4rem;
+  margin-bottom: 1.4rem;*/
   background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
   background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
   background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
