--- a/_includes/template_link.html
+++ b/_includes/template_link.html
@@ -1,1 +1,1 @@
-<span id="toc"> <a class="shadow" href="{{{{site.readersite}}}}/{{{{site.readersiteprefix}}}}/v/{}.html">{}:{}</a></span>
+<span id='toc'> <a class='shadow' href='{{{{site.readersite}}}}/{{{{site.readersiteprefix}}}}/v/{}.html'>{}:{}</a></span>
