--- a/css/tufte.css
+++ b/css/tufte.css
@@ -931,7 +931,7 @@ span#toc {
   background:whitesmoke;
   padding:0.2rem; }
   
-.ss {font-family:"Liberation Sans";}
+.ss {font-family:"Source Sans Pro";}
 
 .g {color:gray;
 
